[gd_scene load_steps=7 format=3 uid="uid://mrrddvdvxcmt"]

[ext_resource type="Script" uid="uid://tgyocmnddbo5" path="res://data_stream/app.gd" id="1_g1v5p"]
[ext_resource type="PackedScene" uid="uid://beufu5xhumttd" path="res://simulator/simulator.tscn" id="2_txdh2"]
[ext_resource type="PackedScene" uid="uid://bqjl35jbbw1eg" path="res://ui/sim_list.tscn" id="4_3o47o"]
[ext_resource type="PackedScene" uid="uid://yeyusrjeigw0" path="res://3Dplayer/3dplayer.tscn" id="4_ix51n"]
[ext_resource type="Script" uid="uid://ctni608swqmof" path="res://simulator/InputHandler.gd" id="4_txdh2"]
[ext_resource type="PackedScene" uid="uid://dfrfbcfldlojm" path="res://ui/pid_editor.tscn" id="6_vpmrl"]

[node name="app" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1v5p")

[node name="simulator" parent="." instance=ExtResource("2_txdh2")]
unique_name_in_owner = true

[node name="input_handler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_txdh2")

[node name="main_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_appbar" type="Panel" parent="main_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07

[node name="HBoxContainer" type="HBoxContainer" parent="main_container/main_appbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="load_sim" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Load simulation
"

[node name="save_sim" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Save simulation
"

[node name="new_sim" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "New simulation
"

[node name="Control" type="Control" parent="main_container/main_appbar/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="sim_settings" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "simulation settings"

[node name="controller_settings" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Controller settings
"

[node name="channel_settings" type="Button" parent="main_container/main_appbar/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Channel settings
"

[node name="HBoxContainer" type="HBoxContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="sim_list" parent="main_container/HBoxContainer" instance=ExtResource("4_3o47o")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_stretch_ratio = 0.25

[node name="3Dplayer" parent="main_container/HBoxContainer" instance=ExtResource("4_ix51n")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="pid_editor" parent="." instance=ExtResource("6_vpmrl")]
visible = false

[connection signal="toggled" from="main_container/main_appbar/HBoxContainer/load_sim" to="." method="_on_load_sim_toggled"]
[connection signal="pressed" from="main_container/main_appbar/HBoxContainer/save_sim" to="." method="_on_save_sim_pressed"]
[connection signal="pressed" from="main_container/main_appbar/HBoxContainer/new_sim" to="." method="_on_new_sim_pressed"]
[connection signal="toggled" from="main_container/main_appbar/HBoxContainer/sim_settings" to="." method="_on_load_sim_toggled"]
[connection signal="request_new_frame" from="main_container/HBoxContainer/3Dplayer" to="." method="_on_dplayer_request_new_frame"]
[connection signal="value_changed" from="pid_editor/Panel/VBoxContainer/edit/p_slider" to="." method="_on_p_slider_value_changed"]
[connection signal="value_changed" from="pid_editor/Panel/VBoxContainer/edit2/i_slider" to="." method="_on_i_slider_value_changed"]
[connection signal="value_changed" from="pid_editor/Panel/VBoxContainer/edit3/d_slider" to="." method="_on_d_slider_value_changed"]

[editable path="pid_editor"]
